bk_ida/gccida/c1/expand_function_start
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_function_start/src/function.c:6989:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *pending_sizes; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_function_start/src/function.c:6990:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_function_start/src/function.c:6991:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_function_start/src/function.c:6995:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_function_start/src/function.c:7023:29: error: use of undeclared identifier 'machine_mode'
v13 = assign_stack_local( ( machine_mode)v12, mode_size[v12], 0); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_function_start/src/function.c:7042:22: error: use of undeclared identifier 'machine_mode'
v15 = gen_reg_rtx( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_function_start/src/function.c:7046:22: error: use of undeclared identifier 'machine_mode'
v18 = gen_rtx_MEM( ( machine_mode)LOBYTE( subr->decl.result->block.supercontext), v15); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_function_start/src/function.c:7060:46: error: use of undeclared identifier 'machine_mode'
subr->decl.result->decl.rtl = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v17)); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_function_start/src/function.c:7060:61: error: expected expression
subr->decl.result->decl.rtl = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v17)); 
                                                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_function_start/src/function.c:7130:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v22.rtwint = ( __int64)rtl->fld[0]; 
                       ^~~~~~~~~~~
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_function_start/src/obj/function.o] Error 1
